Added an API endpoint to retrieve last 6 week's transactions for a user
